--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".Activity.SplashScreenActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -19,13 +19,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".CategoActivity"
+        <activity android:name=".Activity.MenuActivity"
             android:label="@string/app_name">
         </activity>
-        <activity android:name=".MenuApp"
-            android:label="@string/app_name">
-        </activity>
-        <activity android:name=".Resumenapp"
+        <activity android:name=".Activity.Resumenapp"
             android:label="@string/app_name">
         </activity>
     </application>
